// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TabBlock /> matches the snapshot tab 1 1`] = `
<div
  className="campaigns-settings__tab-block-container"
>
  <div
    className="campaigns-settings__tab-block-wrapper"
  >
    <Tab1
      accountsSettingsItems={
        Array [
          Object {
            "id": "1",
            "mentionedFeed": false,
            "platform": "Instagram",
            "status": "Verified",
            "taggedFeed": true,
            "url": "test.png",
            "userFeed": true,
            "userName": "Instagram",
          },
          Object {
            "id": "2",
            "mentionedFeed": false,
            "platform": "Twitter",
            "status": "Rejected",
            "taggedFeed": false,
            "url": "test.png",
            "userFeed": false,
            "userName": "Blackmirror",
          },
        ]
      }
      activeTab="Campaign details"
      description="Lorem ipsum dolor sit amet, consectetur adipiscing elit"
      hashtagBlackList={
        Array [
          "zxc",
          "vbn",
        ]
      }
      isMediaCollection={true}
      isPhotosModerationQueue={true}
      isShoppableLink={true}
      mediaCollectionList={
        Array [
          "qwe",
          "rty",
        ]
      }
      name="Summer Sales 10%"
      productCatalogue="Product catalogue2"
      productsCatalogueList={
        Array [
          "Product catalogue1",
          "Product catalogue2",
          "Product catalogue3",
          "Product catalogue4",
        ]
      }
      stateHandler={[Function]}
      switchHandler={[Function]}
      userBlackList={
        Array [
          "asd",
          "fgh",
        ]
      }
    />
  </div>
</div>
`;

exports[`<TabBlock /> matches the snapshot tab 2 1`] = `
<div
  className="campaigns-settings__tab-block-container"
>
  <div
    className="campaigns-settings__tab-block-wrapper"
  >
    <Tab2
      accountsSettingsItems={
        Array [
          Object {
            "id": "1",
            "mentionedFeed": false,
            "platform": "Instagram",
            "status": "Verified",
            "taggedFeed": true,
            "url": "test.png",
            "userFeed": true,
            "userName": "Instagram",
          },
          Object {
            "id": "2",
            "mentionedFeed": false,
            "platform": "Twitter",
            "status": "Rejected",
            "taggedFeed": false,
            "url": "test.png",
            "userFeed": false,
            "userName": "Blackmirror",
          },
        ]
      }
      activeTab="Media Collections"
      description="Lorem ipsum dolor sit amet, consectetur adipiscing elit"
      hashtagBlackList={
        Array [
          "zxc",
          "vbn",
        ]
      }
      isMediaCollection={true}
      isPhotosModerationQueue={true}
      isShoppableLink={true}
      mediaCollectionList={
        Array [
          "qwe",
          "rty",
        ]
      }
      name="Summer Sales 10%"
      productCatalogue="Product catalogue2"
      productsCatalogueList={
        Array [
          "Product catalogue1",
          "Product catalogue2",
          "Product catalogue3",
          "Product catalogue4",
        ]
      }
      stateHandler={[Function]}
      switchHandler={[Function]}
      userBlackList={
        Array [
          "asd",
          "fgh",
        ]
      }
    />
  </div>
</div>
`;

exports[`<TabBlock /> matches the snapshot tab 3 1`] = `
<div
  className="campaigns-settings__tab-block-container"
>
  <div
    className="campaigns-settings__tab-block-wrapper"
  >
    <Tab3
      accountsSettingsItems={
        Array [
          Object {
            "id": "1",
            "mentionedFeed": false,
            "platform": "Instagram",
            "status": "Verified",
            "taggedFeed": true,
            "url": "test.png",
            "userFeed": true,
            "userName": "Instagram",
          },
          Object {
            "id": "2",
            "mentionedFeed": false,
            "platform": "Twitter",
            "status": "Rejected",
            "taggedFeed": false,
            "url": "test.png",
            "userFeed": false,
            "userName": "Blackmirror",
          },
        ]
      }
      activeTab="Blacklists"
      description="Lorem ipsum dolor sit amet, consectetur adipiscing elit"
      hashtagBlackList={
        Array [
          "zxc",
          "vbn",
        ]
      }
      isMediaCollection={true}
      isPhotosModerationQueue={true}
      isShoppableLink={true}
      mediaCollectionList={
        Array [
          "qwe",
          "rty",
        ]
      }
      name="Summer Sales 10%"
      productCatalogue="Product catalogue2"
      productsCatalogueList={
        Array [
          "Product catalogue1",
          "Product catalogue2",
          "Product catalogue3",
          "Product catalogue4",
        ]
      }
      stateHandler={[Function]}
      switchHandler={[Function]}
      userBlackList={
        Array [
          "asd",
          "fgh",
        ]
      }
    />
  </div>
</div>
`;

exports[`<TabBlock /> matches the snapshot tab 4 1`] = `
<div
  className="campaigns-settings__tab-block-container"
>
  <div
    className="campaigns-settings__tab-block-wrapper"
  >
    <Tab4
      accountsSettingsItems={
        Array [
          Object {
            "id": "1",
            "mentionedFeed": false,
            "platform": "Instagram",
            "status": "Verified",
            "taggedFeed": true,
            "url": "test.png",
            "userFeed": true,
            "userName": "Instagram",
          },
          Object {
            "id": "2",
            "mentionedFeed": false,
            "platform": "Twitter",
            "status": "Rejected",
            "taggedFeed": false,
            "url": "test.png",
            "userFeed": false,
            "userName": "Blackmirror",
          },
        ]
      }
      activeTab="Media rights"
      description="Lorem ipsum dolor sit amet, consectetur adipiscing elit"
      hashtagBlackList={
        Array [
          "zxc",
          "vbn",
        ]
      }
      isMediaCollection={true}
      isPhotosModerationQueue={true}
      isShoppableLink={true}
      mediaCollectionList={
        Array [
          "qwe",
          "rty",
        ]
      }
      name="Summer Sales 10%"
      productCatalogue="Product catalogue2"
      productsCatalogueList={
        Array [
          "Product catalogue1",
          "Product catalogue2",
          "Product catalogue3",
          "Product catalogue4",
        ]
      }
      stateHandler={[Function]}
      switchHandler={[Function]}
      userBlackList={
        Array [
          "asd",
          "fgh",
        ]
      }
    />
  </div>
</div>
`;
